[gd_scene load_steps=9 format=3 uid="uid://b6hmpa7iyf7bb"]

[ext_resource type="Script" path="res://scripts/ui/crafting.gd" id="1_m4r8l"]
[ext_resource type="Texture2D" uid="uid://csyrhldj2v5mk" path="res://assets/temp/crafting_test.png" id="2_h7rpq"]
[ext_resource type="FontFile" uid="uid://b6wpimsx1db6j" path="res://assets/fonts/m3x6.ttf" id="3_c3puj"]
[ext_resource type="Texture2D" uid="uid://qdxay3rxf5xa" path="res://assets/ui/sword_normal.png" id="4_05shr"]
[ext_resource type="Texture2D" uid="uid://dxn80n62ukbat" path="res://assets/ui/sword_focused.png" id="5_0newg"]
[ext_resource type="Texture2D" uid="uid://du1ws4b7c26oa" path="res://assets/objects/log.png" id="6_jnth1"]
[ext_resource type="Texture2D" uid="uid://dvgws3566i0q0" path="res://assets/objects/rock.png" id="7_6tcq5"]

[sub_resource type="SpriteFrames" id="SpriteFrames_88bjn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_05shr")
}],
"loop": true,
"name": &"sword",
"speed": 5.0
}]

[node name="Crafting" type="CanvasLayer"]
script = ExtResource("1_m4r8l")

[node name="bg" type="Sprite2D" parent="."]
position = Vector2(323, 193)
scale = Vector2(0.35, 0.35)
texture = ExtResource("2_h7rpq")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 65.0
offset_top = 131.0
offset_right = 317.0
offset_bottom = 306.0
color = Color(0.454902, 0.341176, 0.266667, 1)

[node name="CraftingLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -112.5
offset_right = 64.0
offset_bottom = -61.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_c3puj")
theme_override_font_sizes/font_size = 64
text = "CRAFTING"

[node name="SwordButton" type="TextureButton" parent="."]
offset_left = 73.0
offset_top = 141.0
offset_right = 280.0
offset_bottom = 347.0
scale = Vector2(0.35, 0.35)
focus_neighbor_right = NodePath("../TextureButton2")
focus_neighbor_bottom = NodePath("../SwordButton2")
focus_next = NodePath("../TextureButton2")
focus_previous = NodePath("../TextureButton5")
toggle_mode = true
texture_normal = ExtResource("4_05shr")
texture_focused = ExtResource("5_0newg")

[node name="TextureButton2" type="TextureButton" parent="."]
offset_left = 153.0
offset_top = 141.0
offset_right = 360.0
offset_bottom = 347.0
scale = Vector2(0.35, 0.35)
focus_neighbor_left = NodePath("../SwordButton")
focus_neighbor_right = NodePath("../TextureButton3")
focus_neighbor_bottom = NodePath("../TextureButton4")
focus_next = NodePath("../TextureButton3")
focus_previous = NodePath("../SwordButton")
toggle_mode = true
texture_normal = ExtResource("4_05shr")
texture_focused = ExtResource("5_0newg")

[node name="TextureButton3" type="TextureButton" parent="."]
offset_left = 233.0
offset_top = 141.0
offset_right = 440.0
offset_bottom = 347.0
scale = Vector2(0.35, 0.35)
focus_neighbor_left = NodePath("../TextureButton2")
focus_neighbor_bottom = NodePath("../TextureButton5")
focus_next = NodePath("../SwordButton2")
focus_previous = NodePath("../TextureButton2")
toggle_mode = true
texture_normal = ExtResource("4_05shr")
texture_focused = ExtResource("5_0newg")

[node name="SwordButton2" type="TextureButton" parent="."]
offset_left = 73.0
offset_top = 221.0
offset_right = 280.0
offset_bottom = 427.0
scale = Vector2(0.35, 0.35)
focus_neighbor_top = NodePath("../SwordButton")
focus_neighbor_right = NodePath("../TextureButton4")
focus_next = NodePath("../TextureButton4")
focus_previous = NodePath("../TextureButton3")
toggle_mode = true
texture_normal = ExtResource("4_05shr")
texture_focused = ExtResource("5_0newg")

[node name="TextureButton4" type="TextureButton" parent="."]
offset_left = 153.0
offset_top = 221.0
offset_right = 360.0
offset_bottom = 427.0
scale = Vector2(0.35, 0.35)
focus_neighbor_left = NodePath("../SwordButton2")
focus_neighbor_top = NodePath("../TextureButton2")
focus_neighbor_right = NodePath("../TextureButton5")
focus_next = NodePath("../TextureButton5")
focus_previous = NodePath("../SwordButton2")
toggle_mode = true
texture_normal = ExtResource("4_05shr")
texture_focused = ExtResource("5_0newg")

[node name="TextureButton5" type="TextureButton" parent="."]
offset_left = 233.0
offset_top = 221.0
offset_right = 440.0
offset_bottom = 427.0
scale = Vector2(0.35, 0.35)
focus_neighbor_left = NodePath("../TextureButton4")
focus_neighbor_top = NodePath("../TextureButton3")
focus_next = NodePath("../SwordButton")
focus_previous = NodePath("../TextureButton4")
toggle_mode = true
texture_normal = ExtResource("4_05shr")
texture_focused = ExtResource("5_0newg")

[node name="NameLabel" type="Label" parent="."]
offset_left = 468.0
offset_top = 139.0
offset_right = 559.0
offset_bottom = 190.0
theme_override_fonts/font = ExtResource("3_c3puj")
theme_override_font_sizes/font_size = 64
text = "Sword
"

[node name="PictureIcon" type="AnimatedSprite2D" parent="."]
position = Vector2(417, 171)
scale = Vector2(0.35, 0.35)
sprite_frames = SubResource("SpriteFrames_88bjn")
animation = &"sword"

[node name="LogSprite" type="Sprite2D" parent="."]
position = Vector2(425.6, 224.6)
scale = Vector2(0.4, 0.4)
texture = ExtResource("6_jnth1")
vframes = 2
frame = 1

[node name="LogLabel" type="Label" parent="."]
offset_left = 444.6
offset_top = 217.6
offset_right = 477.6
offset_bottom = 243.6
theme_override_fonts/font = ExtResource("3_c3puj")
theme_override_font_sizes/font_size = 32
text = "10"
vertical_alignment = 1

[node name="StoneSprite" type="Sprite2D" parent="."]
position = Vector2(495.6, 228.6)
scale = Vector2(0.4, 0.4)
texture = ExtResource("7_6tcq5")
vframes = 2
frame = 1

[node name="StoneLabel" type="Label" parent="."]
offset_left = 512.6
offset_top = 217.6
offset_right = 552.6
offset_bottom = 243.6
theme_override_fonts/font = ExtResource("3_c3puj")
theme_override_font_sizes/font_size = 32
text = "10"
vertical_alignment = 1

[node name="CraftButton" type="Button" parent="."]
offset_left = 419.0
offset_top = 260.0
offset_right = 517.0
offset_bottom = 294.0
theme_override_fonts/font = ExtResource("3_c3puj")
theme_override_font_sizes/font_size = 32
text = "Craft"
